--- a/video-background/style.css
+++ b/video-background/style.css
@@ -47,21 +47,39 @@ input:checked+.slider:before {
     transform: translateX(26px);
 }
 
-
-/* Rounded sliders */
-
-.slider.round {
-    border-radius: 34px;
-}
-
-.slider.round:before {
-    border-radius: 50%;
-}
-
 .video-container {
     position: fixed;
     right: 0;
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
+    object-fit: cover;
+    z-index: -2;
+}
+
+.content {
+    position: fixed;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0, 5);
+    color: #f1f1f1;
+    width: 100%;
+    padding: 20px;
+}
+
+h1 {
+    display: flex;
+    justify-content: center;
+    color: white;
+    margin-top: 250px;
+}
+
+header::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: -1;
 }
