--- a/countdown/style.css
+++ b/countdown/style.css
@@ -1,7 +1,9 @@
 .grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 1fr 5fr 1fr;
+    height: 720px;
+    width: 100%;
+    grid-template-rows: 80px 1fr 20px;
+    grid-template-columns: 2fr 1fr 1fr;
     grid-gap: 20px;
     grid-template-areas: "header header header" "main main sidebar" "main main sidebar" "footer footer footer";
 }
@@ -14,7 +16,8 @@
 
 .header {
     grid-area: header;
-    background-color: rgb(235, 221, 204);
+    background-color: rgba(180, 97, 115, 0.5);
+    text-align: center;
 }
 
 .main {
@@ -25,12 +28,47 @@
 
 .sidebar {
     grid-area: sidebar;
-    background-color: goldenrod;
+    height: 100%;
+    text-align: center;
+}
+
+.sidebar a {
+    display: block;
+    text-decoration: none;
+    line-height: 130px;
+    font-size: 20px;
+}
+
+.sidebar a:hover {
+    background-color: rgba(180, 97, 115, 0.5);
+    color: white;
 }
 
 .footer {
     grid-area: footer;
-    background-color: rebeccapurple;
+}
+
+.social {
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+.footer .social a {
+    font-size: 24px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    border: 1px solid #ccc;
+    margin: 0 8px;
+    color: inherit;
+    opacity: 0.75;
+}
+
+.footer .social a:hover {
+    opacity: 0.9;
 }
 
 .topnav {
